# KLRFome_JAX

./: .cursorrules  .gitignore  AGENTS.md  COMPARISON_R_vs_JAX.md  METHODS_ROADMAP_2026-07-13.md  MODEL_DATA_FOUNDATION.md  README.md  REPRESENTATION_EXTENSIONS_2026-07-15.md  SECTION6_BRANCH_HANDOFF_2026-07-24.md  SECTION6_COMPARISON_SUMMARY_2026-07-13.md  SECTION6_EVALUATION_2026-07-16.md  SYNTHETIC_LAB_EXTENSION_RESULTS_2026-07-16.md  SYNTHETIC_LAB_RESULTS_2026-07-15.md  SYNTHETIC_METHODS_LAB.md  TESTING.md  pyproject.toml  run_tests.sh  run_tests_simple.sh
.github/workflows/: ci.yml
AI_Context/: AI_ROADMAP.md  klrfome_wasserstein_spec.md
benchmarks/: BENCHMARK_PLAN.md  INSTALL_R_DEPS.md  README.md  R_SCRIPT_CHANGES.md  benchmark_kernels.py  benchmark_prediction.py  build_real_data_notebook.py  build_section6_evaluation_notebook.py  compare_diagnostics.py  compare_exact.py  compare_kernels.py  compare_shared.py  diagnose_differences.py  diagnose_r_with_exported_data.R  diagnose_r_workflow.R  diagnose_with_r_data.py  evaluate_auc.py  evaluate_r_auc.R  export_formatted_data.R  extract_shared_data.R  format_site_data_python.py  generate_benchmark_data.py  klrfome_r_functions.R  quick_diagnose.py  quick_diagnose_r_workflow.R  quick_diagnose_shared.R  quick_diagnose_shared.py  run_benchmark.sh  run_section6_comparison.py  run_section6_evaluation.py  run_section6_sensitivity.py  run_synthetic_methods_lab.py  section6_comparison_config.json  section6_evaluation_config.json  section6_evaluation_result_schema.json  section6_result_schema.json  synthetic_lab_config.json  synthetic_lab_extensions_config.json  synthetic_lab_extensions_smoke_config.json  synthetic_lab_result_schema.json  (+7 more)
example_data/: README.md  metadata.json  sites.geojson  var1.tif  var2.tif  var3.tif
examples/: __init__.py  readme_quickstart.py
klrfome/: __init__.py  api.py
klrfome/data/: __init__.py  formats.py  preprocessing.py  simulation.py  synthetic.py  tabular.py
klrfome/io/: __init__.py  raster.py  raster_source.py  tabular.py  vector.py
klrfome/kernels/: __init__.py  base.py  distribution.py  rbf.py  rff.py  wasserstein.py
klrfome/models/: __init__.py  baselines.py  distribution.py  klr.py  primal.py  shrinkage.py  spec.py  utils.py
klrfome/prediction/: __init__.py  focal.py  parallel.py
klrfome/utils/: __init__.py  evaluation.py  gpu.py  reproducibility.py  scaling.py  serialization.py  validation.py
klrfome/visualization/: __init__.py  plots.py
notebooks/: 01_quickstart.ipynb  02_kernel_comparison.ipynb  03_hyperparameter_tuning.ipynb  03_real_data_kernel_comparison.ipynb  03_wasserstein_quickstart.ipynb  04_advanced_kernels.ipynb  04_real_data_validation.ipynb  05_section6_model_validation.ipynb  06_synthetic_methods_lab.ipynb  DIAGNOSTIC_CELL_ADD_TO_NOTEBOOK.py  PREDICTION_MAPS_CELL.py  README.md  REAL_DATA_NOTEBOOK_PLAN.md
tests/: __init__.py  conftest.py  test_data.py  test_experiment_reproducibility.py  test_ingestion.py  test_integration.py  test_kernels.py  test_klr.py  test_model_foundation.py  test_prediction.py  test_presence_background_evaluation.py  test_readme_quickstart.py  test_section6_evaluation.py  test_section6_sensitivity.py  test_serialization.py  test_shrinkage.py  test_synthetic_lab.py  test_tabular.py  test_wasserstein.py
