[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "klrfome"
version = "0.1.0"
description = "Distribution regression for focal geospatial presence-background modelling in Python and JAX"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Matthew Harris", email = "mr.ecos@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]
keywords = ["kernel methods", "logistic regression", "distribution regression", "geospatial", "archaeology"]

dependencies = [
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "rasterio>=1.3.0",
    "geopandas>=0.12.0",
    "shapely>=2.0.0",
    "pyproj>=3.4.0",
    "pandas>=2.0.0",
    "xarray>=2023.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tqdm>=4.65.0",
    "typing-extensions>=4.5.0",
    "jaxtyping>=0.2.0",
    "scikit-learn>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "jsonschema>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/mrecos/KLRFome_JAX"
Documentation = "https://github.com/mrecos/KLRFome_JAX/blob/main/MODEL_DATA_FOUNDATION.md"
Repository = "https://github.com/mrecos/KLRFome_JAX"
Issues = "https://github.com/mrecos/KLRFome_JAX/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["klrfome*"]
exclude = ["tests*", "benchmarks*", "notebooks*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Use --no-cov by default to avoid issues, can be overridden with --cov
addopts = "-v"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
# Ruff parses string dimensions in jaxtyping annotations as Python forward
# references. F722/F821 are therefore false positives for shapes such as
# Float[Array, "n_samples n_features"].
ignore = ["F722", "F821"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
follow_imports = "skip"
# jaxtyping encodes symbolic dimensions as strings (for example "n d").
# With imports skipped, Mypy treats single-symbol shapes as forward names and
# JAX values as Any; these two diagnostics do not reflect runtime type safety.
disable_error_code = ["name-defined", "no-any-return"]

[[tool.mypy.overrides]]
# These pre-foundation modules use dynamic JAX/GeoPandas patterns that predate
# the typed Bag/ModelSpec interfaces. Keep the package-level check useful while
# typing them incrementally instead of pretending third-party array shapes are
# statically understood.
module = [
    "klrfome.api",
    "klrfome.data.simulation",
    "klrfome.data.tabular",
    "klrfome.io.vector",
    "klrfome.kernels.*",
    "klrfome.models.utils",
    "klrfome.prediction.*",
    "klrfome.utils.scaling",
    "klrfome.utils.validation",
    "klrfome.visualization.*",
]
ignore_errors = true
